--- a/Jirono/index.html
+++ b/Jirono/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.png">
     <title>Jirono-IT Solutions and Corporate Template</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+        crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -24,9 +25,8 @@
                         <a class="logo navbar-brand" href="#">
                             <img src="images/logo-dark.png" alt="">
                         </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                 </div>
-                 <!-- Jirono features end -->
+                <!-- Jirono features end -->
             </div>
         </section>
 
@@ -182,11 +182,11 @@
                 <div class="col-lg-2">
                     <h5>Helpful links</h5>
                     <ul>
-                       <li> <i class="fas fa-angle-right"></i><a href="#"> About us</a></li>
+                        <li> <i class="fas fa-angle-right"></i><a href="#"> About us</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Features</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> FAQ's</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Blog</a></li>
-                        
+
                     </ul>
                 </div>
                 <div class="col-lg-2">
@@ -196,7 +196,7 @@
                         <li><i class="fas fa-angle-right"></i><a href="#"> Terms of Use</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Support Center</a></li>
                         <li><i class="fas fa-angle-right"></i><a href="#"> Contact</a></li>
-                        
+
                     </ul>
                 </div>
                 <!-- Footer navigation end -->
