--- a/Jirono/index.html
+++ b/Jirono/index.html
@@ -127,51 +127,51 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5 mb-5">
-                    <div class="col-lg-3">
-                        <div class="card wow animate__fadeInUp animate__animated animated__delay-1">
-                            <div class="features-icon">
-                                <i class="fas fa-cloud"></i>
-                            </div>
-                            <div class="card-body">
-                                <h5>Cloud Solutions</h5>
-                                <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card wow animate__fadeInUp animate__animated animated__delay-2">
-                            <div class="features-icon">
-                                <i class="fas fa-laptop"></i>
-                            </div>
-                            <div class="card-body">
-                                <h5>Cloud Solutions</h5>
-                                <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
+                <div class="row same mt-5 mb-5">
+                        <div class="col-lg-3">
+                            <div class="card wow animate__fadeInUp animate__animated animated__delay-1">
+                                <div class="features-icon">
+                                    <i class="fas fa-cloud"></i>
+                                </div>
+                                <div class="card-body">
+                                    <h5>Cloud Solutions</h5>
+                                    <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card wow animate__fadeInUp animate__animated animated__delay-3">
-                            <div class="features-icon">
-                                <i class="fas fa-video"></i>
-                            </div>
-                            <div class="card-body">
-                                <h5>Cloud Solutions</h5>
-                                <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card wow animate__fadeInUp animate__animated animated__delay-4">
-                            <div class="features-icon">
-                                <i class="fas fa-server"></i>
-                            </div>
-                            <div class="card-body">
-                                <h5>Cloud Solutions</h5>
-                                <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
+                        <div class="col-lg-3">
+                            <div class="card wow animate__fadeInUp animate__animated animated__delay-2">
+                                <div class="features-icon">
+                                    <i class="fas fa-laptop"></i>
+                                </div>
+                                <div class="card-body">
+                                    <h5>Cloud Solutions</h5>
+                                    <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                        <div class="col-lg-3">
+                            <div class="card wow animate__fadeInUp animate__animated animated__delay-3">
+                                <div class="features-icon">
+                                    <i class="fas fa-video"></i>
+                                </div>
+                                <div class="card-body">
+                                    <h5>Cloud Solutions</h5>
+                                    <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="card wow animate__fadeInUp animate__animated animated__delay-4">
+                                <div class="features-icon">
+                                    <i class="fas fa-server"></i>
+                                </div>
+                                <div class="card-body">
+                                    <h5>Cloud Solutions</h5>
+                                    <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
+                                </div>
+                            </div>
+                        </div>
                 </div>
             </div>
         </section>
