--- a/Jirono/faq.html
+++ b/Jirono/faq.html
@@ -82,116 +82,72 @@
             <div class="cover-image">
             </div>
             <div class="about-caption">
-                <h1>About Us</h1>
+                <h1>FAQ's</h1>
                 <div class="caption-links d-flex">
                     <a href="#">Home   <i class="fas fa-angle-right"></i></a>
-                    <p>About us</p>
+                    <p>FAQ's</p>
                 </div>
             </div>
         </div>
-        <section id="ways">
+        <section id="faq">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <div class="text">
-                            <h3>4 ways Jirono helps your business succeed</h3>
-                            <p>Donec vulputate urna sed rutrum venenatis. Cras consequat <span class="d-block"> magna
-                                    quis arcu elementum, quis congue risus volutpat.</span></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row same">
-                    <div class="col-lg-3">
-                        <div class="card wow animate__fadeInUp animate__animated animated__delay-1">
-                            <div class="features-icon">
-                                <i class="fas fa-cloud"></i>
-                            </div>
-                            <div class="card-body">
-                                <h5>Cloud Solutions</h5>
-                                <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card wow animate__fadeInUp animate__animated animated__delay-2">
-                            <div class="features-icon">
-                                <i class="fas fa-laptop"></i>
-                            </div>
-                            <div class="card-body">
-                                <h5>Cloud Solutions</h5>
-                                <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card wow animate__fadeInUp animate__animated animated__delay-3">
-                            <div class="features-icon">
-                                <i class="fas fa-video"></i>
-                            </div>
-                            <div class="card-body">
-                                <h5>Cloud Solutions</h5>
-                                <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card wow animate__fadeInUp animate__animated animated__delay-4">
-                            <div class="features-icon">
-                                <i class="fas fa-server"></i>
-                            </div>
-                            <div class="card-body">
-                                <h5>Cloud Solutions</h5>
-                                <p>Morbilling pharetra sapiening ut mattis viverra. Curabitur magna.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-5">
-                    <div class="col-lg-12">
-                        <div class="describing">
-                            <div class="about-images">
-                                <div class="image">
-                                    <img src="images/blog3.jpg">
-                                </div>
-                                <div class="mis-layer layer">
-                                    <h5>Our Mission</h5>
-                                    <p>Praesent posuere nec nisl quis hendrerit. Duis sit amet rutrum lorem. Ut maximus orci in
-                                        metus blandit, et placerat dolor congue.</p>
-                                    <p>Proin tempor ligula nec dolor facilisis mattis. Suspendisse potenti. Suspendisse
-                                        efficitur turpis quis risus molestie cursus. Cras malesuada a massa et aliquet. Nunc vel
-                                        urna eu neque consectetur imperdiet. Sed pretium neque ligula, ac vehicula massa aliquet
-                                        eu.</p>
-                                </div>
-                            </div>
+                    <div class="col-lg-6">
+                        <div class="faq-text">
+                            <h3>Freequently Asked Questions</h3>
+                            <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+                                Sed finibus faucibus congue. Interdum et malesuada fames ac ante ipsum primis in
+                                faucibus.</p>
+                            <a href="#" class="btn">GET MORE HELP</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="parallax-home2">
-                <div class="cover-image2">
-                </div>
-                <div class="parallax-info">
-                    <h4> We design and develop <span style="text-decoration:underline">web apps</span> that delight your
-                        users and grow your business.</h4>
-                    <a href="#" class="btn">CONTACT US</a>
-                </div>
-            </div>
+        </section>
+        <section id="features">
             <div class="container">
                 <div class="row">
-                    <div class="describing">
-                        <div class="vis-image about-images">
-                            <div class="image">
-                                <img src="images/about.jpg">
+                    <div class="col-lg-6">
+                        <div class="features-caption">
+                            <div class="text">
+                                <h2>Cloud Services</h2>
+                                <p>Phasellus vitae velit sit amet diam semper commodo quis quis <span
+                                        class="d-block">libero. Morbi consequat arcu
+                                        augue, molestie faucibus metus </span>ullamcorper vel.</p>
                             </div>
-                            <div class="layer vis-layer">
-                                <h5>Our Vision</h5>
-                                <p>Praesent posuere nec nisl quis hendrerit. Duis sit amet rutrum lorem. Ut maximus orci in
-                                    metus blandit, et placerat dolor congue.</p>
-                                <p>Proin tempor ligula nec dolor facilisis mattis. Suspendisse potenti. Suspendisse
-                                    efficitur turpis quis risus molestie cursus. Cras malesuada a massa et aliquet. Nunc vel
-                                    urna eu neque consectetur imperdiet. Sed pretium neque ligula, ac vehicula massa aliquet
-                                    eu.</p>
+
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <a href="#" class="btn">Near Cloud</a>
                             </div>
+                            <div class="col-lg-6">
+                                <a href="#" class="btn">Office Cloud</a>
+                            </div>
+                            <div class="col-lg-6">
+                                <a href="#" class="btn">Backup Systems</a>
+                            </div>
+                            <div class="col-lg-6">
+                                <a href="#" class="btn">hybrid Cloud</a>
+                            </div>
+                            <div class="col-lg-6">
+                                <a href="#" class="btn">API CLoud</a>
+                            </div>
+                            <div class="col-lg-6">
+                                <a href="#" class="btn">SDK Cloud</a>
+                            </div>
+                            <div class="col-lg-6">
+                                <a href="#" class="btn">Web Services</a>
+                            </div>
+                            <div class="col-lg-6">
+                                <a href="#" class="btn">Cloud Hosting</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-5">
+                        <div class="features-image wow animate__animated animate__fadeInLeft ">
+                            <img src="images/dark-1.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -250,7 +206,7 @@
                             <li><i class="fab fa-github-square"></i></li>
                         </ul>
                     </div>
-                    
+
                 </div>
             </div>
             <div class="row mt-3">
@@ -260,6 +216,8 @@
             </div>
         </div>
     </footer>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
         integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
         crossorigin="anonymous"></script>
