--- a/Jirono/aboutus.html
+++ b/Jirono/aboutus.html
@@ -78,7 +78,7 @@
         <!-- NAV END -->
     </header>
     <main>
-        <div class="parallax-about">
+        <!-- <div class="parallax-about">
             <div class="cover-image">
             </div>
             <div class="about-caption">
@@ -88,7 +88,7 @@
                     <p>About us</p>
                 </div>
             </div>
-        </div>
+        </div> -->
         <section id="ways">
             <div class="container">
                 <div class="row">
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="row same">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="card wow animate__fadeInUp animate__animated animated__delay-1">
                             <div class="features-icon">
                                 <i class="fas fa-cloud"></i>
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="card wow animate__fadeInUp animate__animated animated__delay-2">
                             <div class="features-icon">
                                 <i class="fas fa-laptop"></i>
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="card wow animate__fadeInUp animate__animated animated__delay-3">
                             <div class="features-icon">
                                 <i class="fas fa-video"></i>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="card wow animate__fadeInUp animate__animated animated__delay-4">
                             <div class="features-icon">
                                 <i class="fas fa-server"></i>
