--- a/Jirono/faq.html
+++ b/Jirono/faq.html
@@ -92,13 +92,42 @@
         <section id="faq">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="faq-text">
                             <h3>Freequently Asked Questions</h3>
                             <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
                                 Sed finibus faucibus congue. Interdum et malesuada fames ac ante ipsum primis in
                                 faucibus.</p>
                             <a href="#" class="btn">GET MORE HELP</a>
+                        </div>
+                    </div>
+                    <div id="accordion" class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="card w-100">
+                            <div class="card-header bg-dark text-white" id="header1">
+                                Featured-1
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Special title treatment</h5>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            </div>
+                        </div>
+                        <div class="card w-100">
+                            <div class="card-header bg-dark text-white"id="header2">
+                                Featured-2
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Special title treatment</h5>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            </div>
+                        </div>
+                        <div class="card w-100">
+                            <div class="card-header bg-dark text-white"id="header3">
+                                Featured-3
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Special title treatment</h5>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -118,36 +147,44 @@
 
                         </div>
                         <div class="row">
-                            <div class="col-lg-6">
-                                <a href="#" class="btn">Near Cloud</a>
+                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                <a href="#" class="active2 designList btn active"><i class="fas fa-angle-right"></i><span>Near
+                                        Cloud</span></a>
                             </div>
-                            <div class="col-lg-6">
-                                <a href="#" class="btn">Office Cloud</a>
+                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>Office
+                                        Cloud</span></a>
                             </div>
-                            <div class="col-lg-6">
-                                <a href="#" class="btn">Backup Systems</a>
+                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>Backup
+                                        Systems</span></a>
                             </div>
-                            <div class="col-lg-6">
-                                <a href="#" class="btn">hybrid Cloud</a>
+                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>hybrid
+                                        Cloud</span></a>
                             </div>
-                            <div class="col-lg-6">
-                                <a href="#" class="btn">API CLoud</a>
+                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>API
+                                        CLoud</span></a>
                             </div>
-                            <div class="col-lg-6">
-                                <a href="#" class="btn">SDK Cloud</a>
+                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>SDK
+                                        Cloud</span></a>
                             </div>
-                            <div class="col-lg-6">
-                                <a href="#" class="btn">Web Services</a>
+                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>Web
+                                        Services</span></a>
                             </div>
-                            <div class="col-lg-6">
-                                <a href="#" class="btn">Cloud Hosting</a>
+                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                <a href="#" class="designList btn"><i class="fas fa-angle-right"></i><span>Cloud
+                                        Hosting</span></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-1"></div>
-                    <div class="col-lg-5">
-                        <div class="features-image wow animate__animated animate__fadeInLeft ">
-                            <img src="images/dark-1.png" alt="">
+                    <div class="col-lg-5 col-md-12 col-sm-12">
+                        <div class="features-image d-flex justify-content-center wow animate__animated animate__fadeInLeft ">
+                            <img src="images/dark-1.png" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
